[package]
name = "disco-music-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3.9"
tracing-futures = "0.2"
dashmap = "5.1"
flume = "0.10.11"

[dependencies.songbird]
version = "0.2.2"
features = ["serenity"]

[dependencies.serenity]
version = "0.10"
features = ["framework", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "rt-multi-thread"]