[package]
name = "disco-music-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-futures = "0.2"
dashmap = "5.4.0"
flume = "0.10.14"

[dependencies.redis ]
version = "0.22.2"
features = [ "aio", "tokio-comp"]

[dependencies.songbird]
version = "0.1.0"
features = ["serenity-rustls"]

[dependencies.serenity]
version = "0.10"
# features = ["framework", "standard_framework", "voice", "rustls_backend"]
features = ["client", "cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.24.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.lavalink-rs]
version = "0.8.0"
#features = ["rustls", "serenity", "discord-gateway", "tracing-log"]
features = ["serenity", "rustls"]
